--- a/articles/templates/home.html
+++ b/articles/templates/home.html
@@ -4,11 +4,15 @@
 <html>
     <head>
         <link rel="stylesheet" href="/static/css/home.css">
-
+        
     </head>
     <body>
+        <div class="background-image"> </div>
+        <div class="taylar">
+                <img id='taylarImage' src="/static/images/Taylar.jpg">
+                <p class="caption">Dr. Jonathan V. Taylar</p>
+        </div>
     </body>
-</html>
-<h1>Profile page for professors</h1>
+</html>s
 
 {% endblock %}
