--- a/articles/static/css/home.css
+++ b/articles/static/css/home.css
@@ -6,6 +6,9 @@ body {
     align-items: center;
     min-height: 100vh;
     background: linear-gradient(#ffffff, #ffffff);
+    position: relative;
+    overflow: auto;
+    background-color: white;
 }
 
 .input-box i {
@@ -27,4 +30,51 @@ body {
   font-size: 15px;
   color: azure;
   font-weight: 700; 
+}
+
+
+.background-image {
+  position: absolute;
+  z-index: -1;
+  top:67px;
+  width: 100%;
+  height: 50%;
+  background-image: url('/static/images/cpe_bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+}
+
+.taylar {
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-top: 550px;
+  margin-left: 90px;
+  width: 150px;
+  height: 150px;
+  border-radius: 30%; 
+  transition: transform 0.3s ease;
+  z-index: 1;
+}
+
+.taylar img {
+  max-width: 150%; 
+  height: auto; 
+  border-radius: 30%;
+  z-index: 1;
+}
+
+
+.taylar:hover {
+  transform: scale(1.1); /* This will scale the .taylar container up to 110% when hovered */
+  opacity: 0.9;
+}
+
+
+.caption {
+  text-align: center;
+  margin-top: 10px; /* adjust as needed */
 }
