--- a/articles/static/css/navbar.css
+++ b/articles/static/css/navbar.css
@@ -1,20 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Trirong:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.nav-link{
-    transition: all 0.2s;
-    position: relative;
-    color: black;
-    font-weight: 400;
-}
-
 .nav-link:not(.navbar-brand) {
     transition: all 0.2s;
     position: relative;
     color: black;
-    font-weight: 500;
+    font-weight: 600;
     padding: 15px 0px 5px 0px;
     margin: 0 15px;
     font-size: 15px;
+    background-color: white;
 }
 
 .nav-link::after{
@@ -41,9 +35,9 @@
 .navbar::after {
     content: "";
     position: absolute;
-    left: 0;
-    bottom: -8px;
     width: 100%;
+    height: 100%;
+    background-color: white;
     border-bottom: 1px solid rgb(0, 0, 0);
 }
 
@@ -61,4 +55,12 @@
 }
 .navbar-brand::after{
     color: rgb(215,172,4);
+}
+
+.navbar { 
+    width: 100%;
+    z-index: 1000; 
+    position: fixed;
+    background-color: white;
+    opacity: 1;
 }
