--- a/articles/templates/navbar.html
+++ b/articles/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-transparent">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-white">
   <link rel="stylesheet" href="/static/css/navbar.css">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'home' %}">KaizenProject</a>
