--- a/articles/static/css/home.css
+++ b/articles/static/css/home.css
@@ -5,10 +5,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(#ffffff, #ffffff);
     position: relative;
     overflow: auto;
-    background-color: white;
 }
 
 .input-box i {
@@ -35,7 +33,7 @@ body {
 
 .background-image {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   top:67px;
   width: 100%;
   height: 50%;
@@ -45,36 +43,24 @@ body {
   background-position: top;
 }
 
-.taylar {
-  display: flex; 
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  margin-top: 550px;
-  margin-left: 90px;
-  width: 150px;
-  height: 150px;
-  border-radius: 30%; 
-  transition: transform 0.3s ease;
-  z-index: 1;
-}
-
 .taylar img {
-  max-width: 150%; 
-  height: auto; 
+  position: relative;
+  top: 200px;
+  left: -525px;
   border-radius: 30%;
   z-index: 1;
 }
 
-
 .taylar:hover {
-  transform: scale(1.1); /* This will scale the .taylar container up to 110% when hovered */
+  transform: scale(1.05); /* This will scale the .taylar container up to 110% when hovered */
   opacity: 0.9;
 }
 
 
 .caption {
-  text-align: center;
+  text-align: justify;
   margin-top: 10px; /* adjust as needed */
+  top: 200px;
+  left: -530px;
+  position: relative;
 }
