--- a/articles/static/css/navbar.css
+++ b/articles/static/css/navbar.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Trirong:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
 .nav-link:not(.navbar-brand) {
     transition: all 0.2s;
     position: relative;
@@ -8,13 +9,12 @@
     padding: 15px 0px 5px 0px;
     margin: 0 15px;
     font-size: 15px;
-    background-color: white;
 }
 
 .nav-link::after{
     content: '';
     opacity: 0;
-    transition: all 0.2;
+    transition: all 0.2s; /* Added 's' for seconds */
     height: 2px;
     width: 100%;
     background-color: rgb(215,172,4);
@@ -31,15 +31,15 @@
    opacity: 1;
 }
 
-
 .navbar::after {
     content: "";
     position: absolute;
     width: 100%;
-    height: 100%;
-    background-color: white;
-    border-bottom: 1px solid rgb(0, 0, 0);
+    height: 1px;
+    top: 110%;
+    border-bottom: 3px solid rgb(0, 0, 0) ;
 }
+
 
 /* navbar logo KAIzen project */
 .navbar-brand {
@@ -55,12 +55,4 @@
 }
 .navbar-brand::after{
     color: rgb(215,172,4);
-}
-
-.navbar { 
-    width: 100%;
-    z-index: 1000; 
-    position: fixed;
-    background-color: white;
-    opacity: 1;
 }
