--- a/articles/templates/home.html
+++ b/articles/templates/home.html
@@ -9,8 +9,8 @@
     <body>
         <div class="background-image"> </div>
         <div class="taylar">
-                <img id='taylarImage' src="/static/images/Taylar.jpg">
-                <p class="caption">Dr. Jonathan V. Taylar</p>
+            <img id='taylarImage' src="/static/images/Taylar.jpg">
+            <p class="caption">Dr. Jonathan V. Taylar<p>
         </div>
     </body>
 </html>s
