--- a/articles/templates/navbar.html
+++ b/articles/templates/navbar.html
@@ -11,19 +11,19 @@
           <a class="nav-link " aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">About</a>
+          <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{}">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Logout</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'register' %}">Signup</a>
+          <a class="nav-link" href="{% url 'sign-up' %}">Signup</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Logout</a>
         </li>
       </ul>
     </div>
