--- a/articles/templates/register.html
+++ b/articles/templates/register.html
@@ -12,41 +12,46 @@
         <link rel="stylesheet" href="static/css/register.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
-    {% csrf_token %}
     <body> 
         <div class="wrapper">
-            <form action='#'>
-                <h1>Register</h1>
-                <div class="input-box">
-                    <input type="text" placeholder="first name" required>
+            <form method="POST" action= "{% url 'reg' %}">
+                {% csrf_token %}
+
+                <h3 id = "form-title">Create an Account</h3>
+                <h2 id = "register">Register</h2> 
+                <div id="rectangle"></div>
+
+                <div class="input-box" id ="first-name">
+                    <input type="text" name='first_name' placeholder="First name" required>
                     <i class='bx bx-user'></i>
                 </div>
 
-                <div class="input-box">
-                    <input type="text" placeholder="last name" required>
+                <div class="input-box" id="last-name">
+                    <input type="text" name='last_name' placeholder="Last name" required>
                     <i class='bx bx-user'></i>
                 </div>
 
-                <div class="input-box">
-                    <input type="text" placeholder="Email" required>
+
+                <div class="input-box" id="email">
+                    <input type="text" name="email" placeholder="Email" required>
                     <i class='bx bx-envelope'></i>
                 </div>
 
-                <div class="input-box">
-                    <input type="password" placeholder="password" required>
+                <div class="input-box" id = "password">
+                    <input type="password" name="password" placeholder="Password" required>
                     <i class='bx bxs-lock-alt' ></i>
                 </div>
 
-                <button type="submit" class="btn">Register</button>
+                <button id ="register-button" value = "Register" type="submit" class="btn"><p>Register </p></button>
                 
                 <div class="Signin-link">
-                    <p>Already Have an Account?
+                    <p id = 'account'>|      Already Have an Account?
                     <a href="{% url 'login' %}">
-                        <strong><bold>Login</bold></bold></strong></a>
+                        <strong><bold>Login</strong></a>
                     </p>
                 </div>
             </form>
-        </div>
+        </div>S
     </body>
 
 </html>
