--- a/articles/templates/navbar.html
+++ b/articles/templates/navbar.html
@@ -9,6 +9,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link " aria-current="page" href="{% url 'home' %}">Home</a>
+          {% if user.is_authenticated %}
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -17,14 +18,16 @@
           <a class="nav-link" href="{}">Profile</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          {% else %}
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'sign-up' %}">Signup</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Logout</a>
-        </li>
+        {% endif %}
       </ul>
     </div>
   </div>
